src/App.css
:root {
  --almost-black: #212121;
  --dark-gray: #cdcdcd;
  --light-gray: #efefef;
  --almost-white: #fcfcfc;
  --highlight-bg-color: #ffffe5;
  --highlight-color: #ab9900;
  --arrow-color: #07196b;
  --region-outline-color: #07196b;
  --link-color: #0d2fcb;
  --link-hover-color: #07196b;
  --link-visited-color: #6b074b;
}

* {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  font-family: Lato, sans-serif;
}

body {
  color: var(--almost-black);
  background-color: var(--dark-gray);
}

p {
  overflow-wrap: break-word;
}

a {
  color: var(--link-color);
  text-decoration: none;
}

a:hover {
  color: var(--link-hover-color);
}

a:visited {
  color: var(--link-visited-color);
}

h1 {
  border-bottom: 0.1rem solid var(--dark-gray);
}

h2 a {
  text-decoration: none;
  color: var(--almost-black);
}

blockquote {
  padding: 0.5rem 1rem;
  margin: 1rem 1.5rem;
  background-color: var(--highlight-bg-color);
  border-radius: 0.25rem;
  border: 1px solid var(--highlight-color);
}

blockquote h4 {
  margin: 0.75rem 0 1rem 0;
}

table {
  margin: auto;
}

th {
  padding: 0.5rem;
  font-weight: bold;
  text-align: left; 
}

td {
  padding: 0.5rem;  
}

tr:not(:last-child) td {
  border-bottom: 0.1rem solid var(--dark-gray);
}

table.info-table th {
  background-color: var(--arrow-color);
  color: var(--almost-white);
}

table.info-table th {
  white-space: nowrap;
}

table.info-table td {
  overflow-wrap: break-word;
  background-color: white;
  border: none; 
  vertical-align: top;
}

table.info-table ul, table.info-table ol {
  margin: 0;
  padding-left: 1rem;
}

div.page-container {
  margin:auto;
  background-color: var(--almost-white);
  padding: 0.5rem 1rem;
  width: 100%;
  max-width: 45rem;
  box-shadow: 0 0.25em 0.5em rgba(0,0,0,0.3);
}

div.guide-container {
  padding-bottom: 2rem;
  opacity: 0;
  transition: opacity 200ms ease-out;
}


div.screen-desc-container {
  margin: 0.5rem auto;
}

div.screen-container {
  position: relative;
  border: 0.1rem solid var(--almost-black);
  border-top-left-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
  /*box-shadow: 0 0.25em 0.5em rgba(0,0,0,0.3);*/
}

div.region-links-container {
  display: flex;
}

div.arrow-link {
  border: 0.125rem solid var(--arrow-color);
  border-top: none;
  border-left: none;
}

div.arrow-link:first-child {
  border-left: 0.125rem solid var(--arrow-color);
  border-bottom-left-radius: 0.25rem;
}

div.arrow-link:last-child {
  border-bottom-right-radius: 0.25rem;
}

div.arrow-link button {
  display: block;
  width: 100%;
  height: 100%;
  padding: 0.25rem 0.5rem;
  text-decoration: none;
  font-weight: bold;
  border: none;
  margin: 0;
  color: var(--almost-black);
  background-color: white;
  transition: all 200ms ease-in;
}

div.arrow-link.active button {
  color: var(--light-gray);
  background-color: var(--arrow-color);
}

div.arrow-link button:hover {
  color: var(--light-gray);
  background-color: var(--arrow-color);
}

img.screenshot {
  max-width: 100%;
  display: block;
  margin: auto;
  z-index: 1;
}

.arrow:after {
  content:"";
  display: table;
  clear:both;
}

.arrow-up {
  width: 0; 
  height: 0; 
  border-left: 0.5rem solid transparent;
  border-right: 0.5rem solid transparent;
  
  border-bottom: 1rem solid var(--arrow-color);
  transition: all 100ms ease-out;
}

.arrow-down {
  width: 0; 
  height: 0; 
  border-left: 1rem solid transparent;
  border-right: 1rem solid transparent;
  
  border-top: 1rem solid var(--arrow-color);
}

.arrow-right {
  width: 0; 
  height: 0; 
  border-top: 1rem solid transparent;
  border-bottom: 1rem solid transparent;
  
  border-left: 1rem solid var(--arrow-color);
}

.arrow-left {
  width: 0; 
  height: 0; 
  border-top: 1rem solid transparent;
  border-bottom: 1rem solid transparent; 
  
  border-right:1rem solid var(--arrow-color); 
}

.arrow-body {
  width:0.25rem;
  height: 0;
  background-color: var(--arrow-color);
  box-shadow: 0 0.25em 0.5em rgba(0,0,0,0.3);
  z-index: 2;
  transition: all 100ms ease-out;
}

.arrow-desc {
  position: relative;
  background-color: white;
  padding: 0.5rem;
  margin: 0;
  z-index: 3;
}

.arrow-desc p {
  margin: 1rem 0;
}

.arrow-desc p:first-child {
  margin-top: 0;
}

.arrow-desc p:last-child {
  margin-bottom: 0;
}

.hidden {
  position: absolute;
  width: 0;
  height: 0;
  left: -99em;
}

div.region-desc-container {
  border: 0.25rem solid var(--arrow-color);
  border-bottom-right-radius: 0.25rem;
}

div.region-desc-container.single-description {
  border-bottom-left-radius: 0.25rem;
}

div.arrow-region {
  position: absolute;
  border: 0.25rem solid var(--region-outline-color);
  border-radius: 0.25rem;
  padding: 0.1rem;
  transition: border 100ms ease-in;
}

div.arrow-region.active {
  border: 0.25rem solid var(--highlight-color);
  z-index: 2;
}

div.arrow-region .region-label {
  display: block;
  font-size: 0.8rem;
  font-weight: bold;
  width: auto;
  float: right;
  padding: 0.1rem;
  border-radius: 0.125rem;
  background-color: var(--almost-black);
  color: var(--light-gray);
}

.page-nav {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.page-nav .page-link {
  min-width: 4rem;  
}

.page-link a {
  text-decoration: none;
  font-weight: bold;
  color: var(--almost-black);
}

.flowchart-container {
  margin: auto;
  display: flex;
  justify-content: space-evenly;
}

.flowchart-box {
  border: 0.25rem solid var(--region-outline-color);
  padding: 0.5rem;
  text-align: center;
  background-color: white;
  font-weight: bold;
  position: relative;
  margin: 0.5rem;
  border-radius: 0.25rem;
}

.flowchart-box:not(:last-child):after {
  content: "";
  position: absolute;
  width: 0;
  height: 0;
  left: 103%;
  top: 38%;

  border-top: 0.75rem solid transparent;
  border-bottom: 0.75rem solid transparent;
  
  border-left: 1rem solid var(--arrow-color);
}

@media screen and (max-width: 38rem) {
  .flowchart-container {
    flex-direction: column;
  }

  .flowchart-box:not(:last-child):after {
    left: calc(50% - 0.5rem);
    top: 100%;

    border-left: 0.75rem solid transparent;
    border-right: 0.75rem solid transparent;
  
    border-top: 1rem solid var(--arrow-color);
  }
}

@media screen and (min-width: 55rem) {
  nav.page-nav {
    position: sticky;
    top: 0;
    z-index: 999;
    width: 100%;
    background-color: var(--almost-white);
    border-bottom:1px solid var(--dark-gray);
  }

  nav.page-nav.bottom {
    display: none;
  }

  div.page-container {
    max-width: calc(50rem + 30ch);
    padding-top: 0;
  }

  div.page-content {
    padding-left: 30ch;
  }

  div.guide-content {
    display: flex;
    flex-direction: row;

    transition: transform 200ms;
  }

  div.toc-container:not(.main-toc) {
    position: fixed;
    padding: 0.25rem;
    font-size: 0.9rem;
    width: 30ch;
    height: calc(100% - 1.5rem);
    overflow-y: scroll;
    background-color: var(--almost-white);
  }

  div.toc-container h1 {
    font-size: 1.2rem;
    border: none;
  }

  div.toc-container ul {
    padding-left: 2ch;
  }
}

/******************
 * CSS Transforms *
 ******************/
.fade-enter {
  opacity: 0;
}
.fade-enter-active {
  opacity: 1;
  transition: opacity 200ms;
}
.fade-exit {
  opacity: 1;
}
.fade-exit-active {
  opacity: 0;
  transition: opacity 200ms;
}

.stretch-v-enter {
  transform: scaleY(0);
}
.stretch-v-enter-active {
  transform: scaleY(1);
  transition: transform 200ms;
}
.stretch-v-exit {
  transform: scaleY(1);
}
.stretch-v-exit-active {
  transform: scaleY(0);
  transition: transform 200ms;
}

